src/tests/test-src/errors/E33-bad-arg-count.syntran
// E33: bad-arg-count
// A function call was given the wrong number of arguments

let a = 1;
let b = abs(1, 2);
